# panda_robot

./: CMakeLists.txt  README.md  package.xml  panda_robot_controllers_plugin.xml  setup.py
config/: franka_controllers.yaml  franka_controllers.yaml~  logitech.yaml
franka_description/: README.md  Robotic_Arm_Test_Cube.stl  Robotic_Arm_Test_Holder.stl  panda_arm.xacro
include/panda_robot/: cartesian_velocity_example_controller.h  cartesian_velocity_example_controller.h~
launch/: franka_arm_pos_joy.launch  franka_arm_vel_controller.launch  franka_arm_vel_joy.launch  franka_control_state_publisher.launch  kinect_azure.launch  logitech.launch  panda_env.launch  panda_moveit.launch  panda_robot.launch  remapped_joy.launch
src/: __init__.py  cartesian_velocity_example_controller.cpp  panda_client.py  panda_env.py  panda_env_test.py  panda_launcher.py  remap_joy_to_point.py  remap_joy_to_twist.py
src/gym-panda-robot/: setup.py
src/gym-panda-robot/gym_panda_robot/: __init__.py
src/gym-panda-robot/gym_panda_robot/envs/: __init__.py  panda_client.py  panda_peg_in_hole.py  panda_reacher_env.py
