<?xml version="1.0"?>
<package>
  <name>panda_robot</name>
  <version>0.1.0</version>
  <description>Panda Robot</description>
  <license>BSD</license>

  <author email="x@y.com">Florian Shkurti</author>
  <maintainer email="x@y.com">Florian Shkurti</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  
  <build_depend>message_runtime</build_depend>
  
  <run_depend>pluginlib</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>franka_hw</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  
  <run_depend>franka_control</run_depend>
  <run_depend>franka_description</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>panda_moveit_config</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <controller_interface plugin="${prefix}/panda_robot_controllers_plugin.xml"/>
  </export>
</package>
